Made the source editor use a fixed-width font regardless of theme

--- a/src/themes/inc/defaultbase.less
+++ b/src/themes/inc/defaultbase.less
@@ -70,6 +70,10 @@ div.sceditor-dropdown div {
 		min-height: 1px;
 	}
 
+	.sceditor-container > textarea {
+		font-family: Consolas, "Bitstream Vera Sans Mono", "Andale Mono", Monaco, "DejaVu Sans Mono", "Lucida Console", monospace;
+	}
+
 	div.sceditor-dnd-cover {
 		position: absolute;
 		top: 0;
